Fix component on mobile resolutions

--- a/BlazorWizardDemo/wwwroot/app.css
+++ b/BlazorWizardDemo/wwwroot/app.css
@@ -57,8 +57,7 @@ body, html {
 
 .wrapper {
     position: relative;
-    max-width: 1080px;
-    margin: 50px auto;
+    margin: 20px;
 }
 
 .wizard {
@@ -74,32 +73,10 @@ body, html {
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
     text-align: center;
-    height: 100px;
     background-color: #4D637B;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-}
-
-.wizard__header-content {
-    position: absolute;
-    width: 100%;
-    padding: 0 50px;
-    text-align: center;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -60%);
-}
-
-.wizard__header-overlay {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background: rgba(77, 99, 123, 0.6);
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
 }
 
 .wizard__title {
